fix mobile keyboard covering goalModal and reduce max goalCard width

--- a/src/components/GoalCard.css
+++ b/src/components/GoalCard.css
@@ -19,7 +19,7 @@
 
 @media only screen and (min-width: 769px) {
    .goal-card {
-      max-width: 17vw;
+      max-width: 15vw;
    }
 }
 
