--- a/src/components/GoalModal.css
+++ b/src/components/GoalModal.css
@@ -28,6 +28,7 @@
       align-items: center;
       justify-content: center;
       width: 100%;
+      padding: 0rem 1rem;
       border-bottom: 1px solid #dee2e6;
       border-top-left-radius: 0.3rem;
       border-top-right-radius: 0.3rem;
@@ -52,10 +53,12 @@
 
     .goal-modal .days-wrapper {
       columns: 2;
+      margin-left: 0.2rem;
+      margin-right: 0.2rem;
     }
 
     .goal-modal .days-instruction {
-      margin-bottom: 0.1rem;
+      margin-bottom: 0.2rem;
     }
 
     .goal-modal .days-wrapper div {
